--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -105,7 +105,7 @@ By using the realizability
   interpretation of constructive mathematics, RZ 
   translates
 \else
-by translating
+\ by translating
 \fi % \iflong 
   specifications in constructive logic into annotated
   interface code in Objective Caml.
@@ -113,7 +113,7 @@ by translating
   The system supports
   a rich input language allowing descriptions of
   complex mathematical structures. RZ does not extract code from
-  proofs, but allows any implementation, from handwritten code to code extracted from
+  proofs, but allows any implementation method, from handwritten code to code extracted from
   proofs by other tools.
 \end{abstract}
 
