--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -162,7 +162,7 @@
 \newcommand{\iselect}[2]{#1{.}#2}
 
 \newcommand{\itag}{\mathit{tag}}
-\newcommand{\iprod}[3]{(#1{:}#2)\times#3}
+\newcommand{\iprod}[3]{[#1{:}#2]\times#3}
 \newcommand{\isum}[4]{#1{:}#2+#3{:}#4}
 \newcommand{\iquot}[2]{#1{\bigm/} #2}
 \newcommand{\isubset}[3]{\{#1{:}#2\ |\ #3\}}
@@ -177,7 +177,7 @@
 \newcommand{\ipt}{\Pi}
 \newcommand{\ik}{\kappa}
 \newcommand{\iarrow}[2]{#1{\to}#2}
-\newcommand{\idarrow}[3]{(#1{:}#2){\to}#3}
+\newcommand{\idarrow}[3]{[#1{:}#2]{\to}#3}
 \newcommand{\ite}{\theta}
 \newcommand{\ith}{\Theta}
 \newcommand{\iTH}{T}
