--- a/doc/cie/comparison.tex
+++ b/doc/cie/comparison.tex
@@ -75,13 +75,29 @@ real-world programming language, and by providing an input language
 which is rich enough to allow descriptions of involved mathematical
 structures that go well beyond the real numbers.
 
-Finally, we
-\else % \iflong
-We
-\fi
-hope that RZ and, hopefully, its forthcoming applications,
+Finally, we hope that RZ and, hopefully, its forthcoming applications,
 give plenty of evidence for the \emph{practical} value of Constructive
 Mathematics~\cite{Bishop:Bridges:85}.
+
+\else % \iflong
+
+Approaches based on programming languages augmented with datatypes for
+real numbers~\cite{escardo97:_pcf,marcial-romero04:_seman} and topological
+algebras~\cite{TZ98}, and machines augmented with (suitably chosen
+subsets of) real
+numbers~\cite{borodin75,blum98:_compl_real_comput,yap06:_theor_real_comput_egc}
+are motivated by issues ranging from purely theoretical concerns about
+computability and complexity to practical questions in computational
+geometry. RZ attempts to improve practicality by using an actual
+real-world programming language, and by providing an input language
+which is rich enough to allow descriptions of involved mathematical
+structures that go well beyond the real numbers.
+
+Finally, we hope that RZ and, hopefully, its forthcoming applications,
+give plenty of evidence for the \emph{practical} value of Constructive
+Mathematics~\cite{Bishop:Bridges:85}.
+
+\fi
 
 
 
