--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -6,7 +6,7 @@
 \begin{figure}
 	\[
 	\begin{array}{rl@{\quad}l}
-		\noalign{\textbf{Propositions/Predicates}}
+		\noalign{\textbf{Propositions}}
 		\ip,\ipp ::= 
 		    & \iP \ibar \iselect{\im}{\iP}&\mbox{Predicate names}\\
 		  | & \itrue \ | \ \ifalse \ibar \inot{\ip_1} \ibar {\ip_1}{\land}{\ip_2} \ibar 
