--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -357,17 +357,14 @@ KEY="Peyton Jones"}
   series =       {Grundlehren der math. Wissenschaften}
 }
 
-@TechReport{Escardo:97,
-  author =       "Escard\'o, M.H.",
-  title =        "{PCF} extended with real numbers: A domain-theoretic
-                  approach to higher-order exact real number computation",
-  institution =  "Department of Computer Science, University of Edinburgh",
-  year =         1997,
-  number =       "ECS-LFCS-97-374",
-  month =        "December",
-  note =         "PhD thesis at Imperial College of the University of
-                    London, 1996.\ \newline
-\url{http://www.dcs.ed.ac.uk/lfcsreps/EXPORT/97/ECS-LFCS-97-374/}"
+
+
+@PhdThesis{escardo97:_pcf,
+  author = 	 {Escard\'o, M.H.},
+  title = 	 {{PCF} extended with real numbers},
+  school = 	 {Department of Computer Science, University of Edinburgh},
+  year = 	 1997,
+  month =	 {December}
 }
 
 @InProceedings{marcial-romero04:_seman,
