--- a/doc/cie/specifications.tex
+++ b/doc/cie/specifications.tex
@@ -68,7 +68,7 @@
     \omt ::= 
     & \oMT \obar \oselect{\om}{\oMT} & \mbox{Specification names}\\
     | & \osig{\ote_1 \ldots \ote_n} & \mbox{Specification elements}\\
-    | & \ofunctor{\om}{\omt_1}{\omt_2} & \mbox{Parametrized specification}\\
+    | & \ofunctor{\om}{\omt_1}{\omt_2} & \mbox{Parameterized specification}\\
 %    | & \oapp{\omt}{\om} & \mbox{Specification application}
   \end{array}
   \]
