--- a/doc/cie/translation.tex
+++ b/doc/cie/translation.tex
@@ -22,10 +22,10 @@ A set declaration $\iParameter{s}{\iSet}$ is translated to
 \begin{source}
 type s
 predicate (\iPer{s}) : s \iTo s \iTo bool
-assertion symmetric_s =  \iForall x:s, y:s, x \iPer{s} y -> y \iPer{s} x
-assertion transitive_s = \iForall x:s, y:s, z:s, x \iPer{s} y \iAnd y \iPer{s} z \iTo x \iPer{s} z
+assertion symmetric_s :  \iForall x:s, y:s, x \iPer{s} y -> y \iPer{s} x
+assertion transitive_s : \iForall x:s, y:s, z:s, x \iPer{s} y \iAnd y \iPer{s} z \iTo x \iPer{s} z
 predicate \iT{s} : s \iTo bool
-assertion total_def_s =  \iForall x:s,  x : \iT{s} \iIff x \iPer{s} x
+assertion total_def_s :  \iForall x:s,  x : \iT{s} \iIff x \iPer{s} x
 \end{source}
 %
 This says that the programmer should define a type~$s$ and a per
@@ -41,14 +41,14 @@ sets as uniform families (Section~\ref{sec:uniform-families}):
 \begin{source}
 type t
 predicate \iPer{t} : s \iTo t \iTo t \iTo bool *)
-assertion strict_t =  \iForall x:s, y:t, z:t, y \iPer{t x} z \iTo x : ||s||
-assertion extensional_t =
+assertion strict_t :  \iForall x:s, y:t, z:t, y \iPer{t x} z \iTo x : ||s||
+assertion extensional_t :
   \iForall x:s, y:s, z:t, w:t, x \iPer{s} y \iTo z \iPer{t x} w \iTo z \iPer{t y} w
-assertion symmetric_t = \iForall x:s, y:t, z:t, y \iPer{t x} z \iTo z \iPer{t x} y
-assertion transitive_t =
+assertion symmetric_t : \iForall x:s, y:t, z:t, y \iPer{t x} z \iTo z \iPer{t x} y
+assertion transitive_t :
   \iForall x:s, y:t, z:t, w:t, y \iPer{t x} z \iAnd z \iPer{t x} w \iTo y \iPer{t x} w
 predicate ||t|| : s \iTo t \iTo bool *)
-assertion total_def_t =  \iForall x:s, y:t, y : ||t x|| <\iTo y \iPer{t x} y
+assertion total_def_t :  \iForall x:s, y:t, y : ||t x|| <\iTo y \iPer{t x} y
 \end{source}
 %
 The underlying output type~$\f{t}$ is still non-dependent, but the per is
@@ -65,7 +65,7 @@ A value declaration $\iParameter{x}{s}$ is translated to
 %
 \begin{source}
 val x : s
-assertion x_support = x : \iT{s}
+assertion x_support : x : \iT{s}
 \end{source}
 %
 which requires the definition of a value~$\f{x}$ of type~$\f{s}$ which is in
@@ -81,7 +81,7 @@ denoting an element of~$\f{s}$ is translated to
 \newcommand{\iE}{$e$}
 \begin{source}
 val x : s
-assertion x_def =  x \iPer{s} \iE
+assertion x_def : x \iPer{s} \iE
 \end{source}
 %
 The assertion does \emph{not} force~$\f{x}$ to be defined as~$e$, only
@@ -358,7 +358,7 @@ Thus an axiom $\iAxiom{\f{A}}{\phi}$ in the input is translated to
 \newcommand{\iPhi}{$\phi$}
 \begin{source}
 val r : \iTypeOfPhi
-assertion A = u \iRz \iPhi
+assertion A : u \iRz \iPhi
 \end{source}
 %
 which requires the programmer to validate~$\phi$ by providing a
